# thevapelabs

./: Makefile  README.md  lesson1.md  lesson2.md  lesson3.md
claims/: .gitignore  README.md  package-lock.json  package.json
claims/src/: server.ts  solana.ts  utils.ts
claims/src/idl/: misttoken.json  misttoken.ts
claims/src/keys/: verifier.json
distribute-points/: .env.example  DEPLOY.md  foundry.toml
distribute-points/abis/: MistToken.json  PointSyncer.json
distribute-points/script/: DeployMistToken.s.sol  DeployPointSyncer.sol
distribute-points/src/: DistributePoint.sol  MistStakingPool.sol  MistToken.sol  PointSyncer.sol
distribute-points/test/: DistributePoint.t.sol  PointSyncer.t.sol
misttoken/: Anchor.toml  package-lock.json  package.json
misttoken/keys/: mistVpcymdyB5bEMdMJvmCcacjqaL2SeUCw38wyz6MF.json  thevapelabs.json  user.json
misttoken/migrations/: claim.ts  init.ts
misttoken/programs/misttoken/: Cargo.toml
misttoken/programs/misttoken/src/: errors.rs  events.rs  lib.rs
misttoken/programs/misttoken/src/instructions/: claim.rs  initialize.rs  mod.rs
misttoken/programs/misttoken/src/state/: global.rs  mod.rs
misttoken/tests/: misttoken.ts
vapeclub/: .gitignore  Anchor.toml
vapeclub/app/: README.md  package-lock.json  package.json
vapeclub/app/src/components/: RequestAirdrop.tsx  SendTransaction.tsx
vapeclub/app/src/contexts/: ContextProvider.tsx
vapeclub/app/src/contracts/idl/: token_minter.json  vapeclub.json
vapeclub/app/src/contracts/types/: token_minter.ts  vapeclub.ts
vapeclub/app/src/views/basics/: index.tsx
vapeclub/app/src/views/home/: index.tsx
vapeclub/programs/claimtoken/: Cargo.toml
vapeclub/programs/claimtoken/src/: lib.rs
vapeclub/programs/saveproof/: Cargo.toml
vapeclub/programs/saveproof/src/: lib.rs
vapeclub/programs/vapeclub/: Cargo.toml
vapeclub/programs/vapeclub/src/: errors.rs  lib.rs  util.rs
vapeclub/programs/vapeclubtoken/: Cargo.toml
vapeclub/programs/vapeclubtoken/src/: lib.rs  util.rs
zk-mist/: .env.example  package-lock.json  package.json
zk-mist/src/: db.ts  index.ts  logger.ts  solana.ts
zk-mist/src/utils/: common.ts  console.ts
