[package]
description = "Created with Anchor"
edition = "2021"
name = "misttoken"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "misttoken"

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
init_if_needed = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed", "event-cpi"]}
anchor-spl = {version = "0.30.1", features = ["metadata"]}
solana-program = "=1.18.26"
