[package]
name = "claimtoken"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "claimtoken"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
solana-program = "2.0.13"
anchor-lang = "0.30.1"
anchor-spl = {version = "0.30.1", features = ["spl-associated-token-account", "spl-token", "metadata"]}
spl-token = {version = "6.0.0", features = ["no-entrypoint"]}
