[package]
name = "saveproof"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "saveproof"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1",features = ["init-if-needed"]}
# light-system-program = {version = "0.8.0", default-features = false}
light-hasher = "1.1.0"
light-sdk = "0.11.0"
# light-heap = {version = "1.1.0", default-features = false}
