[package]
name = "vapeclub"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vapeclub"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token = {version = "6.0.0", features = ["no-entrypoint"]}
solana-program = "2.0.13"
thiserror = "1.0"
uint = {version = "0.10.0", default-features = false}
borsh = "1.5.1"
mpl-token-metadata = { version = "4.1.2"}


[dev-dependencies]
proptest = "1.0"
serde = "1.0.117"
serde_json = "1.0.59"

[dev-dependencies.serde_with]
version = "3.11.0"
features = ["json"]